@@ -16,7 +16,6 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.handler.FinremCallbackReques
 import uk.gov.hmcts.reform.finrem.caseorchestration.helper.DocumentHelper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseDocument;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DirectionOrder;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DirectionOrderCollection;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.DocumentCollectionItem;
@@ -57,6 +56,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.AUTH_TOKEN;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CaseType.CONTESTED;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.draftorders.review.OrderStatus.APPROVED_BY_JUDGE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.draftorders.review.OrderStatus.PROCESSED;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.draftorders.review.OrderStatus.TO_BE_REVIEWED;
@@ -95,7 +95,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
 
     @Test
     void testCanHandle() {
-        assertCanHandle(underTest, CallbackType.ABOUT_TO_SUBMIT, CaseType.CONTESTED, EventType.PROCESS_ORDER);
+        assertCanHandle(underTest, CallbackType.ABOUT_TO_SUBMIT, CONTESTED, EventType.PROCESS_ORDER);
     }
 
     @Test
@@ -121,9 +121,8 @@ class ProcessOrderAboutToSubmitHandlerTest {
         mockDocumentStamping(TARGET_DOCUMENT_2, STAMPED_DOCUMENT_2);
 
         List<DirectionOrderCollection> uploadHearingOrder = nullExistingUploadHearingOrder ? null : new ArrayList<>();
-        DirectionOrderCollection expectedNewDirectionOrderCollection;
 
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, CONTESTED, FinremCaseData.builder()
             .uploadHearingOrder(uploadHearingOrder)
             .draftOrdersWrapper(DraftOrdersWrapper.builder()
                 .unprocessedApprovedDocuments(List.of(
@@ -131,7 +130,8 @@ class ProcessOrderAboutToSubmitHandlerTest {
                         .uploadDraftDocument(TARGET_DOCUMENT_1).build()).build(),
                     DirectionOrderCollection.builder().value(DirectionOrder.builder().originalDocument(TARGET_DOCUMENT_2)
                         .uploadDraftDocument(TARGET_DOCUMENT_2).build()).build(),
-                    expectedNewDirectionOrderCollection = DirectionOrderCollection.builder().value(DirectionOrder.builder()
+                    DirectionOrderCollection.builder().value(DirectionOrder.builder()
+                        .isOrderStamped(YesOrNo.NO)
                         .uploadDraftDocument(TARGET_DOCUMENT_3).build()).build()
                 ))
                 .build())
@@ -139,7 +139,8 @@ class ProcessOrderAboutToSubmitHandlerTest {
 
         GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> res = underTest.handle(finremCallbackRequest, AUTH_TOKEN);
 
-        assertThat(res.getData().getUploadHearingOrder()).containsExactly(expectedNewDirectionOrderCollection);
+        DirectionOrderCollection actualNewOrder = res.getData().getUploadHearingOrder().getFirst();
+        assertThat(actualNewOrder.getValue().getIsOrderStamped()).isEqualTo(YesOrNo.YES);
     }
 
     @Test
@@ -151,9 +152,8 @@ class ProcessOrderAboutToSubmitHandlerTest {
         List<DirectionOrderCollection> uploadHearingOrder = new ArrayList<>(List.of(
             DirectionOrderCollection.builder().value(DirectionOrder.builder().uploadDraftDocument(TARGET_DOCUMENT_4).build()).build()
         ));
-        DirectionOrderCollection expectedNewDirectionOrderCollection;
 
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(12345678L, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(12345678L, CONTESTED, FinremCaseData.builder()
             .uploadHearingOrder(uploadHearingOrder)
             .draftOrdersWrapper(DraftOrdersWrapper.builder()
                 .unprocessedApprovedDocuments(List.of(
@@ -161,7 +161,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
                         .uploadDraftDocument(TARGET_DOCUMENT_1).build()).build(),
                     DirectionOrderCollection.builder().value(DirectionOrder.builder().originalDocument(TARGET_DOCUMENT_2)
                         .uploadDraftDocument(TARGET_DOCUMENT_2).build()).build(),
-                    expectedNewDirectionOrderCollection = DirectionOrderCollection.builder().value(DirectionOrder.builder()
+                    DirectionOrderCollection.builder().value(DirectionOrder.builder()
                         .uploadDraftDocument(TARGET_DOCUMENT_3).build()).build()
                 ))
                 .build())
@@ -169,9 +169,15 @@ class ProcessOrderAboutToSubmitHandlerTest {
 
         GenericAboutToStartOrSubmitCallbackResponse<FinremCaseData> res = underTest.handle(finremCallbackRequest, AUTH_TOKEN);
 
-        assertThat(res.getData().getUploadHearingOrder())
+        List<DirectionOrderCollection> actualUploadHearingOrder = res.getData().getUploadHearingOrder();
+
+        assertThat(actualUploadHearingOrder)
             .hasSize(2)
-            .contains(expectedNewDirectionOrderCollection);
+            .anySatisfy(order -> {
+                if (TARGET_DOCUMENT_3.equals(order.getValue().getUploadDraftDocument())) {
+                    assertThat(order.getValue().getIsOrderStamped()).isEqualTo(YesOrNo.YES);
+                }
+            });
         assertThat(res.getData().getDraftOrdersWrapper().getUnprocessedApprovedDocuments()).isNull();
         assertThat(res.getData().getDraftOrdersWrapper().getIsLegacyApprovedOrderPresent()).isNull();
         assertThat(res.getData().getDraftOrdersWrapper().getIsUnprocessedApprovedDocumentPresent()).isNull();
@@ -184,7 +190,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         mockDocumentStamping(TARGET_DOCUMENT_2, STAMPED_DOCUMENT_2);
         mockDocumentStamping(TARGET_DOCUMENT_3, STAMPED_DOCUMENT_3);
 
-        when(genericDocumentService.convertDocumentIfNotPdfAlready(ADDITIONAL_DOCUMENT_1, AUTH_TOKEN, String.valueOf(CASE_ID)))
+        when(genericDocumentService.convertDocumentIfNotPdfAlready(ADDITIONAL_DOCUMENT_1, AUTH_TOKEN, CONTESTED))
             .thenReturn(CONVERTED_DOCUMENT_1);
 
         DraftOrderDocReviewCollection test1;
@@ -195,7 +201,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         AgreedDraftOrderCollection test6;
         AgreedDraftOrderCollection test7;
 
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, CONTESTED, FinremCaseData.builder()
             .draftOrdersWrapper(DraftOrdersWrapper.builder()
                 .unprocessedApprovedDocuments(List.of(
                     DirectionOrderCollection.builder().value(DirectionOrder.builder().originalDocument(TARGET_DOCUMENT_1)
@@ -243,19 +249,19 @@ class ProcessOrderAboutToSubmitHandlerTest {
         underTest.handle(finremCallbackRequest, AUTH_TOKEN);
 
         verify(genericDocumentService, times(3)).stampDocument(any(CaseDocument.class), eq(AUTH_TOKEN),
-            eq(StampType.FAMILY_COURT_STAMP), eq(String.valueOf(CASE_ID)));
+            eq(StampType.FAMILY_COURT_STAMP), eq(CONTESTED));
 
         //check DraftOrderDocReviewCollection is updated
         assertEquals(STAMPED_DOCUMENT_1, test1.getValue().getDraftOrderDocument());
         assertEquals(PROCESSED, test1.getValue().getOrderStatus());
-        assertEquals(CONVERTED_DOCUMENT_1, test1.getValue().getAttachments().get(0).getValue());
+        assertEquals(CONVERTED_DOCUMENT_1, test1.getValue().getAttachments().getFirst().getValue());
         assertEquals(STAMPED_DOCUMENT_2, test2.getValue().getDraftOrderDocument());
         assertEquals(PROCESSED, test2.getValue().getOrderStatus());
 
         //check AgreedDraftOrderCollection is updated
         assertEquals(STAMPED_DOCUMENT_1, test3.getValue().getDraftOrder());
         assertEquals(PROCESSED, test3.getValue().getOrderStatus());
-        assertEquals(CONVERTED_DOCUMENT_1, test3.getValue().getAttachments().get(0).getValue());
+        assertEquals(CONVERTED_DOCUMENT_1, test3.getValue().getAttachments().getFirst().getValue());
         assertEquals(STAMPED_DOCUMENT_2, test4.getValue().getDraftOrder());
         assertEquals(PROCESSED, test4.getValue().getOrderStatus());
         assertEquals(STAMPED_DOCUMENT_3, test5.getValue().getDraftOrder());
@@ -279,7 +285,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         AgreedDraftOrderCollection test3;
         AgreedDraftOrderCollection test4;
         AgreedDraftOrderCollection test5;
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, CONTESTED, FinremCaseData.builder()
             .draftOrdersWrapper(DraftOrdersWrapper.builder()
                 .unprocessedApprovedDocuments(List.of(
                     DirectionOrderCollection.builder().value(DirectionOrder.builder().originalDocument(TARGET_DOCUMENT_1)
@@ -317,7 +323,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         underTest.handle(finremCallbackRequest, AUTH_TOKEN);
 
         verify(genericDocumentService, times(2)).stampDocument(any(CaseDocument.class), eq(AUTH_TOKEN),
-            eq(StampType.FAMILY_COURT_STAMP), eq(String.valueOf(CASE_ID)));
+            eq(StampType.FAMILY_COURT_STAMP), eq(CONTESTED));
         //Check PsaDocReviewCollection is updated
         assertEquals(STAMPED_DOCUMENT_1, test1.getValue().getPsaDocument());
         assertEquals(PROCESSED, test1.getValue().getOrderStatus());
@@ -344,7 +350,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         AgreedDraftOrderCollection test3;
         AgreedDraftOrderCollection test4;
 
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, CONTESTED, FinremCaseData.builder()
             .draftOrdersWrapper(DraftOrdersWrapper.builder()
                 .unprocessedApprovedDocuments(List.of(
                     DirectionOrderCollection.builder().value(DirectionOrder.builder().originalDocument(TARGET_DOCUMENT_1)
@@ -380,7 +386,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
         underTest.handle(finremCallbackRequest, AUTH_TOKEN);
 
         verify(genericDocumentService, times(2)).stampDocument(any(CaseDocument.class), eq(AUTH_TOKEN),
-            eq(StampType.FAMILY_COURT_STAMP), any(String.class));
+            eq(StampType.FAMILY_COURT_STAMP), eq(CONTESTED));
         //Check PsaDocReviewCollection is updated
         assertEquals(PROCESSED, test1.getValue().getOrderStatus());
         assertEquals(STAMPED_DOCUMENT_1, test1.getValue().getPsaDocument());
@@ -394,15 +400,16 @@ class ProcessOrderAboutToSubmitHandlerTest {
     }
 
     @Test
-    void shouldStampNewUploadedDocumentsFromUnprocessedApprovedDocuments() throws JsonProcessingException {
+    void shouldStampNewUploadedDocumentsFromUnprocessedApprovedDocuments() {
         when(documentHelper.getStampType(any(FinremCaseData.class))).thenReturn(FAMILY_COURT_STAMP);
         mockDocumentStamping(TARGET_DOCUMENT_1, STAMPED_DOCUMENT_1);
         mockDocumentStamping(TARGET_DOCUMENT_2, STAMPED_DOCUMENT_2);
 
         DirectionOrderCollection expectedNewDocument = DirectionOrderCollection.builder().value(DirectionOrder.builder()
+            .isOrderStamped(YesOrNo.YES)
             .uploadDraftDocument(TARGET_DOCUMENT_3).build()).build();
 
-        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, FinremCaseData.builder()
+        FinremCallbackRequest finremCallbackRequest = FinremCallbackRequestFactory.from(CASE_ID, CONTESTED, FinremCaseData.builder()
             .uploadHearingOrder(new ArrayList<>(List.of(
                 DirectionOrderCollection.builder().value(DirectionOrder.builder().uploadDraftDocument(TARGET_DOCUMENT_4).build()).build()
             )))
@@ -412,26 +419,27 @@ class ProcessOrderAboutToSubmitHandlerTest {
                         .uploadDraftDocument(TARGET_DOCUMENT_1).build()).build(),
                     DirectionOrderCollection.builder().value(DirectionOrder.builder().originalDocument(TARGET_DOCUMENT_2)
                         .uploadDraftDocument(TARGET_DOCUMENT_2).build()).build(),
-                    expectedNewDocument
+                    DirectionOrderCollection.builder().value(DirectionOrder.builder()
+                        .uploadDraftDocument(TARGET_DOCUMENT_3).build()).build()
                 ))
                 .build())
             .build());
 
         lenient().doThrow(new AssertionError("Expected two documents to be processed, but only one was found"))
             .when(additionalHearingDocumentService)
-            .stampAndCollectOrderCollection(
+            .stampAndUpdateOrderCollections(
                 any(FinremCaseDetails.class),
                 eq(AUTH_TOKEN));
         // mocking the valid invocation on createAndStoreAdditionalHearingDocuments
         lenient().doNothing().when(additionalHearingDocumentService)
-            .stampAndCollectOrderCollection(
+            .stampAndUpdateOrderCollections(
                 argThat(a -> a.getData().getUploadHearingOrder().size() == 2 && a.getData().getUploadHearingOrder().contains(expectedNewDocument)),
                 eq(AUTH_TOKEN));
 
         underTest.handle(finremCallbackRequest, AUTH_TOKEN);
 
         verify(genericDocumentService, times(2)).stampDocument(any(CaseDocument.class), eq(AUTH_TOKEN),
-            eq(StampType.FAMILY_COURT_STAMP), eq(String.valueOf(CASE_ID)));
+            eq(StampType.FAMILY_COURT_STAMP), eq(CONTESTED));
     }
 
     @Test
@@ -447,12 +455,12 @@ class ProcessOrderAboutToSubmitHandlerTest {
                 .build())
             .build();
         FinremCallbackRequest callbackRequest = FinremCallbackRequestFactory.from(EventType.PROCESS_ORDER, FinremCaseDetails.builder()
-            .caseType(CaseType.CONTESTED)
+            .caseType(CONTESTED)
             .data(caseData));
 
         final var response = underTest.handle(callbackRequest, AUTH_TOKEN);
 
-        verify(additionalHearingDocumentService).stampAndCollectOrderCollection(callbackRequest.getCaseDetails(), AUTH_TOKEN);
+        verify(additionalHearingDocumentService).stampAndUpdateOrderCollections(callbackRequest.getCaseDetails(), AUTH_TOKEN);
         verify(additionalHearingDocumentService, never()).storeHearingNotice(callbackRequest.getCaseDetails(), AUTH_TOKEN);
         verify(manageHearingActionService).performAddHearing(callbackRequest.getCaseDetails(), AUTH_TOKEN);
         verify(manageHearingActionService).updateTabData(caseData);
@@ -473,12 +481,12 @@ class ProcessOrderAboutToSubmitHandlerTest {
                 .build())
             .build();
         FinremCallbackRequest callbackRequest = FinremCallbackRequestFactory.from(EventType.PROCESS_ORDER, FinremCaseDetails.builder()
-            .caseType(CaseType.CONTESTED)
+            .caseType(CONTESTED)
             .data(caseData));
 
         final var response = underTest.handle(callbackRequest, AUTH_TOKEN);
 
-        verify(additionalHearingDocumentService).stampAndCollectOrderCollection(callbackRequest.getCaseDetails(), AUTH_TOKEN);
+        verify(additionalHearingDocumentService).stampAndUpdateOrderCollections(callbackRequest.getCaseDetails(), AUTH_TOKEN);
         verify(additionalHearingDocumentService, never()).storeHearingNotice(callbackRequest.getCaseDetails(), AUTH_TOKEN);
         verify(manageHearingActionService, never()).performAddHearing(callbackRequest.getCaseDetails(), AUTH_TOKEN);
         verify(manageHearingActionService, never()).updateTabData(caseData);
@@ -486,7 +494,7 @@ class ProcessOrderAboutToSubmitHandlerTest {
     }
 
     private void mockDocumentStamping(CaseDocument originalDocument, CaseDocument stampedDocument) {
-        when(genericDocumentService.stampDocument(originalDocument, AUTH_TOKEN, FAMILY_COURT_STAMP, String.valueOf(CASE_ID)))
+        when(genericDocumentService.stampDocument(originalDocument, AUTH_TOKEN, FAMILY_COURT_STAMP, CONTESTED))
             .thenReturn(stampedDocument);
     }
 
